# sats

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: dimacs.rs  solver.rs
benches/data/: p50.cnf
src/: assignment.rs  cnf.rs  dimacs.rs  eval.rs  expr.rs  main.rs  satat.rs  sats.rs  solver.rs  tseytin.rs
src/cnf/: clause_id.rs  clauses.rs
src/solver/: cdcl.rs  dpll.rs
src/solver/cdcl/: implication_graph.rs  level.rs
