[package]
name = "satat"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[lib]
name = "satat"
path = "src/satat.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
log = "0.4.8"
structopt = "0.3.14"
