[package]
name = "sats"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-2.0"
homepage = "https://github.com/coord-e/sats"
repository = "https://github.com/coord-e/sats"

[lib]
name = "sats"
path = "src/sats.rs"

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "dimacs"
harness = false

[dependencies]
itertools = "0.9.0"
log = "0.4.8"
structopt = "0.3.14"
fern = "0.6.0"
petgraph = "0.5.0"

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3"
